--- a/WorkTime.Web/Views/Home/Index.cshtml
+++ b/WorkTime.Web/Views/Home/Index.cshtml
@@ -27,11 +27,11 @@
                 hi = "Доброй ночи";
             }
         }
-        <b class="h3 mt-2">@hi, @UserInfo.GetUserName()</b>
+        <b class="h1 mt-2">@hi, @UserInfo.GetUserName()</b>
         <br>
-        <b class="h1 mt-4">Добро пожаловать, снова!</b>
+        <b class="h2 mt-4">Добро пожаловать, снова!</b>
         <div class="row mt-5">
-            <div class="w-50 p-0 col">
+            <div class="w-50 p-0 mt-4 ms-4 col">
                 <div class="w-100 h-100 p-4 start-screen-card invoices">
                     <img style="height: 115px;" class="float-end" src="~/resources/ruble.svg">
                     <b class="h2 fs-1">За этот месяц <br> Вы заработали</b>
@@ -47,7 +47,7 @@
                 
                 </div>
             </div>
-            <div class="w-50 p-0 ms-4 col">
+            <div class="w-50 p-0 mt-4 ms-4 col">
                 <div class="w-100 h-100 p-4 start-screen-card tasks">
                 
                     <img class="float-end" src="~/resources/laptop.svg">
@@ -74,11 +74,11 @@
         </div>
         
         <div class="row">
-            <div class="h-100 start-screen-card p-4 mt-4 col" style="background-color: #edf3ec;">
+            <div class="h-100 start-screen-card p-4 mt-4 mt-4 ms-4 col" style="background-color: #edf3ec;">
                 <b class="h2">Статистика заработанных денег из последнего счёта</b>
                 <canvas class="h-100 w-100 mt-4 pb-3 pt-2" id="doughnut-chart" width="175"></canvas>
             </div>
-            <div class="h-100 start-screen-card p-4 mt-4 ms-4 col-8 " style="background-color: #f1eff0;">
+            <div class="h-100 start-screen-card p-4 mt-4 ms-4 col-md-8 col-sm" style="background-color: #f1eff0;">
                 <b class="h2">Статистика выполненных задач за пол года</b>
                 <canvas class="mt-4 pb-3 pt-2" id="line-chart" width="175"></canvas>
             </div>
