--- a/WorkTime.Web/wwwroot/css/site.css
+++ b/WorkTime.Web/wwwroot/css/site.css
@@ -41,12 +41,13 @@ a {
     color: #2182ea;
 }
 
+
 body {
     margin-bottom: 60px;
     overflow: auto;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    background-color: #fafdfd;
+    background-color: #fffffe;
     background-image: url('../../resources/waves/fufel.svg');
 }
 
