--- a/WorkTime.Web/wwwroot/css/objects/start-screen-objects.css
+++ b/WorkTime.Web/wwwroot/css/objects/start-screen-objects.css
@@ -44,6 +44,6 @@
 }
 
 .invoice-button {
-    border-color: #d1edc5 !important;
-    background-color: #d1edc5 !important;
+    border-color: #d6e7cf !important;
+    background-color: #d6e7cf !important;
 }
