Contracts fix (not completed)

--- a/WorkTime.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Вход в систему";
 }
 
-<div class="mx-auto col-md-4 background_login" style="margin-top: 80pt">
+<div class="mx-auto col-md-6 col-lg-4 background_login" style="margin-top: 80pt">
     <h4 class="text-center">Вход</h4>
     <form id="account" method="post">
         <hr />
