--- a/WorkTime.Web/wwwroot/css/site.css
+++ b/WorkTime.Web/wwwroot/css/site.css
@@ -5,6 +5,7 @@
 @import 'objects/form-background.css';
 @import 'objects/start-screen-objects.css';
 @import 'objects/chart.css';
+@import 'objects/tables.css';
 @import 'controls/buttons.css';
 @import 'objects/switch.css';
 /*@import 'objects/yseditor.min.css';*/
