--- a/WorkTime.Web/wwwroot/css/objects/login-form.css
+++ b/WorkTime.Web/wwwroot/css/objects/login-form.css
@@ -1,5 +1,6 @@
 ﻿.background_login {
     border: 1px solid #dadce0;
+    background-color: #FFFFFF;
     border-radius: 8px;
     padding: 48px 40px 36px;
 }
