--- a/WorkTime.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -31,11 +31,16 @@
         </div>
         <div class="mt-3">
             <p>
-                <a style="text-decoration: none" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Зарегестрироваться</a>
+                <a style="text-decoration: none" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Зарегистрироваться</a>
             </p>
-            <p>
+            @{
+                /*
+                <p>
                 <a style="text-decoration: none" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Выслать код активации</a>
-            </p>
+                </p>
+                 */
+            }
+            
         </div>
     </form>
 </div>
