--- a/WorkTime.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -40,7 +40,7 @@
             <label asp-for="Input.ConfirmPassword">Подтверждение пароля</label>
             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
         </div>
-        <button id="registerSubmit" type="submit" class="mt-3 w-100 btn btn-lg btn-primary">Register</button>
+        <button id="registerSubmit" type="submit" class="mt-3 w-100 btn btn-lg btn-primary">Зарегистрироваться</button>
         <p class="mt-3">
             <a style="text-decoration: none" asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Уже есть аккаунт</a>
         </p>
