--- a/WorkTime.Web/Views/Companies/Create.cshtml
+++ b/WorkTime.Web/Views/Companies/Create.cshtml
@@ -54,14 +54,14 @@
                 <span class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
